# wb_humanoid_mpc

./: .clang-format  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENCE.txt  Makefile  README.md  dependencies.txt  image_build.bash  launch_wb_mpc.bash
.devcontainer/: devcontainer.json
.github/workflows/: build_test.yml  format_test.yml
docker/: Dockerfile  image_build.bash  launch_wb_mpc.bash
humanoid_nmpc/humanoid_centroidal_mpc/: CMakeLists.txt  package.xml
humanoid_nmpc/humanoid_centroidal_mpc/include/humanoid_centroidal_mpc/: CentroidalMpcInterface.h
humanoid_nmpc/humanoid_centroidal_mpc/src/: CentroidalMpcInterface.cpp
humanoid_nmpc/humanoid_centroidal_mpc/src/command/: CentroidalMpcTargetTrajectoriesCalculator.cpp
humanoid_nmpc/humanoid_centroidal_mpc/src/cost/: CentroidalMpcEndEffectorFootCost.cpp  ICPCost.cpp
humanoid_nmpc/humanoid_centroidal_mpc/src/mrt/: CentroidalMpcMrtJointController.cpp
humanoid_nmpc/humanoid_centroidal_mpc/test/: testCentroidalConversions.cpp  testDynamicsHelperFunctions.cpp  testPinocchioFrameConversions.cpp
humanoid_nmpc/humanoid_centroidal_mpc_ros2/: CMakeLists.txt  package.xml
humanoid_nmpc/humanoid_centroidal_mpc_ros2/src/: CentroidalMpcDummySimNode.cpp  CentroidalMpcKeyboardPoseCommandNode.cpp  CentroidalMpcRobotSim.cpp  CentroidalMpcSqpNode.cpp
humanoid_nmpc/humanoid_centroidal_mpc_ros2/src/gains/: GainsReceiver.cpp  GainsUpdaterUtils.cpp
humanoid_nmpc/humanoid_centroidal_mpc_ros2/test/: testHumanoidVisualizer.cpp
humanoid_nmpc/humanoid_centroidal_mpc_test/: CMakeLists.txt  package.xml
humanoid_nmpc/humanoid_centroidal_mpc_test/include/humanoid_centroidal_mpc_test/: CentroidalTestingModelInterface.h
humanoid_nmpc/humanoid_centroidal_mpc_test/src/: testCentroidalMpcRobotModel.cpp  testDynamicsHelperFunctions.cpp  testPinocchioFrameConversions.cpp
humanoid_nmpc/humanoid_common_mpc/: CMakeLists.txt
humanoid_nmpc/humanoid_common_mpc/include/humanoid_common_mpc/: HumanoidCostConstraintFactory.h  HumanoidPreComputation.h
humanoid_nmpc/humanoid_common_mpc/src/: HumanoidCostConstraintFactory.cpp  HumanoidPreComputation.cpp
humanoid_nmpc/humanoid_common_mpc/src/command/: TargetTrajectoriesCalculatorBase.cpp
humanoid_nmpc/humanoid_common_mpc/src/common/: ModelSettings.cpp
humanoid_nmpc/humanoid_common_mpc/src/constraint/: ContactMomentZConstraint.cpp  FootCollisionConstraint.cpp
humanoid_nmpc/humanoid_common_mpc/src/contact/: ContactCenterPoint.cpp  ContactPolygon.cpp  ContactRectangle.cpp
humanoid_nmpc/humanoid_common_mpc/src/cost/: EndEffectorKinematicCostHelpers.cpp  EndEffectorKinematicsQuadraticCost.cpp  StateInputQuadraticCost.cpp
humanoid_nmpc/humanoid_common_mpc/src/gait/: GaitSchedule.cpp  GaitScheduleUpdater.cpp  ModeSequenceTemplate.cpp
humanoid_nmpc/humanoid_common_mpc/src/pinocchio_model/: DynamicsHelperFunctions.cpp  createPinocchioModel.cpp  pinocchioUtils.cpp
humanoid_nmpc/humanoid_common_mpc/src/reference_manager/: ProceduralMpcMotionManager.cpp  SwitchedModelReferenceManager.cpp
humanoid_nmpc/humanoid_common_mpc/src/swing_foot_planner/: SwingTrajectoryPlanner.cpp
humanoid_nmpc/humanoid_common_mpc/test/: testEndEffectorKinematicsCostElement.cpp
humanoid_nmpc/humanoid_common_mpc_pyutils/: setup.py
humanoid_nmpc/humanoid_common_mpc_pyutils/humanoid_common_mpc_pyutils/: __init__.py
humanoid_nmpc/humanoid_common_mpc_ros2/: CMakeLists.txt
humanoid_nmpc/humanoid_common_mpc_ros2/humanoid_common_mpc_ros2/: __init__.py  mpc_launch_config.py
humanoid_nmpc/humanoid_common_mpc_ros2/rviz/: humanoid.rviz
humanoid_nmpc/humanoid_common_mpc_ros2/src/: HumanoidGaitCommandNode.cpp  MpcKeyboardVelocityCommandNode.cpp
humanoid_nmpc/humanoid_common_mpc_ros2/src/benchmarks/: DdpBenchmarksPublisher.cpp  SqpBenchmarksPublisher.cpp
humanoid_nmpc/humanoid_common_mpc_ros2/src/gait/: GaitKeyboardPublisher.cpp  GaitScheduleUpdaterRos2.cpp
humanoid_nmpc/humanoid_wb_mpc/: CMakeLists.txt  package.xml
humanoid_nmpc/humanoid_wb_mpc/src/: WBMpcInterface.cpp  WBMpcPreComputation.cpp
humanoid_nmpc/humanoid_wb_mpc/src/cost/: JointTorqueCostCppAd.cpp  (+3 more)
humanoid_nmpc/humanoid_wb_mpc_ros2/: CMakeLists.txt  package.xml
humanoid_nmpc/humanoid_wb_mpc_ros2/src/: WBMpcDummySimNode.cpp  WBMpcPoseCommandNode.cpp  WBMpcRobotSim.cpp  WBMpcSqpNode.cpp
humanoid_nmpc/remote_control/: package.xml  requirements.txt  setup.py
humanoid_nmpc/remote_control/launch/: xbox_velocity_publisher_bridge_client.launch.py
humanoid_nmpc/remote_control/remote_control/: __init__.py  base_velocity_controller_gui.py  xbox_walking_command_publisher.py
lib/mujoco_vendor/: CMakeLists.txt  package.xml
robot_models/drc_atlas/drc_atlas_centroidal_mpc/: CMakeLists.txt  package.xml
robot_models/drc_atlas/drc_atlas_centroidal_mpc/config/command/: reference.info
robot_models/drc_atlas/drc_atlas_centroidal_mpc/config/mpc/: task.info
robot_models/drc_atlas/drc_atlas_centroidal_mpc/launch/: dummy_sim.launch.py
robot_models/drc_atlas/drc_atlas_centroidal_mpc/test/: testPinocchioModel.cpp
robot_models/drc_atlas/drc_atlas_description/: CMakeLists.txt  package.xml
robot_models/unitree_g1/g1_centroidal_mpc/: CMakeLists.txt
robot_models/unitree_g1/g1_wb_mpc/: CMakeLists.txt  package.xml
robot_runtime/mujoco_sim_interface/: CMakeLists.txt  Readme.md  package.xml
robot_runtime/mujoco_sim_interface/exe/: mujocoSimNoTorques.cpp
robot_runtime/mujoco_sim_interface/include/mujoco_sim_interface/: MujocoRenderer.h  MujocoSimInterface.h  MujocoUtils.h
robot_runtime/mujoco_sim_interface/src/: MujocoRenderer.cpp  MujocoSimInterface.cpp
robot_runtime/robot_core/: CMakeLists.txt  package.xml
robot_runtime/robot_core/include/robot_core/: FPSTracker.h  ThreadSafe.h  Types.h
robot_runtime/robot_model/: CMakeLists.txt  package.xml
robot_runtime/robot_model/include/robot_model/: ControllerBase.h  IDMapBase.h  JointIDMap.h  RobotDescription.h  RobotHWInterfaceBase.h  RobotJointAction.h  RobotState.h
robot_runtime/robot_model/src/: RobotDescription.cpp  RobotState.cpp
robot_runtime/robot_model/test/: testRobotDescription.cpp
(+90 files in other folders)
