<?xml version="1.0"?>
<package format="3">
  <name>mujoco_sim_interface</name>
  <version>0.0.0</version>
  <description>Mujoco simulator interface</description>

  <maintainer email="manuel.galliker@gmx.ch">Manuel Yves Galliker</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mujoco_vendor</depend>
  <depend>robot_model</depend>
  <depend>robot_core</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>